[package]
edition = "2021"
name = "cr-cli"
version = "0.1.0"

[dependencies]
chrono = "0.4.38"
clap = {version = "4.5.4", features = ["derive", "unicode"]}
colored = "2.1.0"
rand = "0.8.5"
sevenz-rust = "0.6.0"
tokio = {version = "1.37.0", features = ["macros"]}
toml = "0.8.13"
walkdir = "2.5.0"
mail-send = "0.4.7"
mail-builder = "0.3.1"
futures = "0.3.30"
